--- a/front/package.json
+++ b/front/package.json
@@ -4,18 +4,13 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-table": "^8.0.0-alpha.73",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "d3": "^7.4.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
-    "react-cola": "^0.0.6",
     "react-dom": "^18.1.0",
     "react-lineto": "^3.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
