--- a/front/package.json
+++ b/front/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@tanstack/react-table": "^8.0.0-alpha.73",
     "bootstrap": "^5.1.3",
     "d3": "^7.4.4",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.4.0",
     "react-lineto": "^3.3.0",
+    "react-loading-overlay": "^1.0.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
