--- a/front/package.json
+++ b/front/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@inovua/reactdatagrid-community": "^4.20.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@tanstack/react-table": "^8.0.0-alpha.73",
     "bootstrap": "^5.1.3",
     "d3": "^7.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
